@@ -7,7 +7,7 @@
  * redistribution of this file, and for a DISCLAIMER OF ALL
  * WARRANTIES.
  * 
- * RCS: @(#) $Id: Var.java,v 1.24 2006/01/27 23:39:02 mdejong Exp $
+ * RCS: @(#) $Id: Var.java,v 1.25 2006/02/09 19:38:04 mdejong Exp $
  *
  */
 package tcl.lang;
@@ -257,11 +257,6 @@ class Var {
      */
 
     Var() {
-        init();
-    }
-
-    private final
-    void init() {
 	value    = null;
 	//name     = null; // Like hashKey in Jacl
 	ns       = null;
@@ -584,7 +579,7 @@ class Var {
 			}
 			return null;
 		    }
-		    var = grabVar(interp);
+		    var = new Var();
 		    varNs.varTable.put(tail, var);
 
 		    // There is no hPtr member in Jacl, The hPtr combines the table
@@ -613,7 +608,7 @@ class Var {
 		    }
 		    var = (Var) table.get(part1);
 		    if (var == null) { // we are adding a new entry
-			var = grabVar(interp);
+			var = new Var();
 			table.put(part1, var);
 
 		        // There is no hPtr member in Jacl, The hPtr combines
@@ -699,7 +694,7 @@ class Var {
 		    deleteSearches(var);
 		}
 
-		var = grabVar(interp);
+		var = new Var();
 		arrayTable.put(elName, var);
 
 		// There is no hPtr member in Jacl, The hPtr combines the table
@@ -803,7 +798,7 @@ class Var {
 	    // then free up the relevant structures and hash table entries.
 
 	    if (var.isVarUndefined()) {
-		cleanupVar(interp, var, array);
+		cleanupVar(var, array);
 	    }
 	}
 
@@ -1016,7 +1011,7 @@ class Var {
 	    // then free up the relevant structures and hash table entries.
 
 	    if (var.isVarUndefined()) {
-		cleanupVar(interp, var, array);
+		cleanupVar(var, array);
 	    }
 	}
     }
@@ -1241,8 +1236,8 @@ class Var {
 	// Finally, if the variable is truly not in use then free up its Var
 	// structure and remove it from its hash table, if any. The ref count of
 	// its value object, if any, was decremented above.
-
-	cleanupVar(interp, var, array);
+	
+	cleanupVar(var, array);
 
 	// It's an error to unset an undefined variable.
 	
@@ -1388,7 +1383,7 @@ class Var {
 	// unset and unused, then free up the variable.
 
 	if (var.isVarUndefined()) {
-	    cleanupVar(interp, var, null);
+	    cleanupVar(var, null);
 	}
     }
 
@@ -1548,7 +1543,7 @@ class Var {
 	    var = (Var) ns.varTable.get(tail);
 	    if (var == null) { // we are adding a new entry
 		newvar = true;
-		var = grabVar(interp);
+		var = new Var();
 		ns.varTable.put(tail, var);
 
 		// There is no hPtr member in Jacl, The hPtr combines the table
@@ -1571,7 +1566,7 @@ class Var {
 		var = (Var) table.get(myName);
 		if (var == null) { // we are adding a new entry
 		    newvar = true;
-		    var = grabVar(interp);
+		    var = new Var();
 		    table.put(myName, var);
 		    
 		    // There is no hPtr member in Jacl, The hPtr combines the table
@@ -1601,7 +1596,7 @@ class Var {
 		}
 		link.refCount--;
 		if (link.isVarUndefined()) {
-		    cleanupVar(interp, link, null);
+		    cleanupVar(link, null);
 		} else {
                     // Set flag variable so that cached refs
                     // to this variable are dropped.
@@ -1927,7 +1922,6 @@ class Var {
 
 	    if (var.refCount == 0) {
 		// When we drop the last reference it will be freeded
-		releaseVar(interp, var);
 	    }
 	}
 	table.clear();
@@ -2009,13 +2003,12 @@ class Var {
      * those of its containing parent.  It's called, for example,
      * when a trace on a variable deletes the variable.
      *
-     * @param interp Interp object non-null
      * @param var variable that may be a candidate for being expunged.
-     * @param array Array that contains the variable, or null if this
+     * @param array Array that contains the variable, or NULL if this
      *   variable isn't an array element.
      */
 
-    static protected void cleanupVar(Interp interp, Var var, Var array) {
+    static protected void cleanupVar(Var var, Var array) {
 	if (var.isVarUndefined() && (var.refCount == 0)
 	    && (var.traces == null)
 	    && ((var.flags & IN_HASHTABLE) != 0)) {
@@ -2024,7 +2017,6 @@ class Var {
 		var.table = null;
 		var.hashKey = null;
 	    }
-	    releaseVar(interp, var);
 	}
 	if (array != null) {
 	    if (array.isVarUndefined() && (array.refCount == 0)
@@ -2035,59 +2027,9 @@ class Var {
 		    array.table = null;
 		    array.hashKey = null;
 		}
-	        releaseVar(interp, array);
 	    }
 	}
     }
 
-    // Cached Var object implementation. This provides a
-    // quick pool of Var objects without always having
-    // to invoke new Var(). The pool is on a per-interp
-    // basis.
-
-    static
-    void varPoolInit(Interp interp) {
-        interp.varPool = new Var[Interp.varPoolLength];
-        for (int i=0; i < Interp.varPoolLength; i++) {
-            interp.varPool[i] = new Var();
-        }
-    }
-
-    private static
-    Var grabVar(final Interp interp) {
-        if (interp.varPoolIndex == Interp.varPoolLength) {
-            // Allocate new Var if cache is empty
-            return new Var();
-        } else {
-            return interp.varPool[interp.varPoolIndex++];
-        }
-    }
-
-    private static
-    void releaseVar(final Interp interp, final Var var) {
-        if (interp.varPoolIndex > 0) {
-            // Cache is not full, return var to cache
-            var.init();
-            interp.varPool[--interp.varPoolIndex] = var;
-        }
-
-        // Debug check for duplicate values in range > varPoolIndex
-        if (false) {
-        if (interp.varPoolIndex < 0) {
-            throw new TclRuntimeError("varPoolIndex is " + interp.varPoolIndex);
-        }
-        for (int i=interp.varPoolIndex; i < Interp.varPoolLength ; i++) {
-            for (int j=interp.varPoolIndex; j < Interp.varPoolLength ; j++) {
-                if ((j == i) || (interp.varPool[i] == null)) {
-                    continue;
-                }
-                if (interp.varPool[i] == interp.varPool[j]) {
-                    throw new TclRuntimeError(
-                        "same object at " + i + " and " + j);
-                }
-            }
-        }
-        }
-    }
 
 } // End of Var class
